--- a/scripts-in-progress/human-thymus/HumanData_12_CorrelationGEbtwTlineages.Rmd
+++ b/scripts-in-progress/human-thymus/HumanData_12_CorrelationGEbtwTlineages.Rmd
@@ -35,10 +35,16 @@ library(VennDiagram)
 ```{r import-data}
 # Import seurat object
 # seur.human <- readRDS("~/Projects/HumanThymusProject/data/raw_data/human_data/filtered_seurat_harmony.11.22.22.RDS")
-seur.filt <- readRDS("~/Projects/HumanThymusProject/data/CLUSTER/seurat-integration/input/seur_filt_22-12-19.rds") # removed low-quality cells
+# seur.filt <- readRDS("~/Projects/HumanThymusProject/data/CLUSTER/seurat-integration/input/seur_filt_22-12-19.rds") # removed low-quality cells
+seur <- readRDS("~/Desktop/seurat_filtered_harmony_02_15_23.RDS") # removed low-quality cells
 
 # Sanity check
-print(seur.filt) # 80,614 cells
+print(seur) # 80,614 cells
+
+# Get raw object?
+counts <- seur.filt@assays$RNA@counts
+metadata <- seur.filt@meta.data
+seur.filt <- CreateSeuratObject(counts=counts, meta.data = metadata)
 
 # Quick visualization
 # DimPlot(seur.human, reduction="UMAP_50", group.by="new_clusters") +
@@ -54,14 +60,19 @@ print(seur.filt) # 80,614 cells
 
 ```{r preprocessing1}
 # Preprocessing
-preprocess <- function(seurobj, ndim=20, res=0.8, celltype, approxPCA=TRUE){
+preprocess <- function(seurobj, ndim=20, res=0.8, celltype, approxPCA=FALSE){
   print(seurobj)
   cat("Cells:", unique(seurobj$group.ident), "\n")
   
   print("Normalize")
   seurobj <- NormalizeData(seurobj)
   print("HVG")
-  seurobj <- FindVariableFeatures(seurobj, selection.method="vst", nfeatures=2000)
+  if(length(VariableFeatures(seurobj))==0){
+      print("-> Compute 2000 HVGs")
+      seurobj <- FindVariableFeatures(seurobj, selection.method="vst", nfeatures=2000)
+  } else if(length(VariableFeatures(seurobj))>0){
+    print(paste0("-> ", length(VariableFeatures(seurobj)), " HVGs already set in object"))
+  }
   print("Scale")
   seurobj <- ScaleData(seurobj)
   print("PCA")
@@ -93,7 +104,7 @@ preprocess <- function(seurobj, ndim=20, res=0.8, celltype, approxPCA=TRUE){
 ### 2.2. CD4 T cells
 ```{r preprocessing-cd4}
 # Run preprocessing
-unique(seur.filt$group.ident)
+# unique(seur.filt$group.ident)
 seur.cd4 <- preprocess(seurobj = subset(seur.filt, subset=group.ident=="CD4_Thymus"),  celltype = "CD4thy", ndim=10, res=0.2)
 
 # Annotate
@@ -106,8 +117,8 @@ seur.cd4@meta.data$cell_annot <- case_when(
   seur.cd4@meta.data$seurat_clusters == 0 ~ "thyCD4_ccr9",
   seur.cd4@meta.data$seurat_clusters == 1 ~ "thyCD4_ccr7",
   seur.cd4@meta.data$seurat_clusters == 2 ~ "thyCD4_ISP",
-  seur.cd4@meta.data$seurat_clusters == 3 ~ "thyCD4_DPp",
-  seur.cd4@meta.data$seurat_clusters == 4 ~ "thyCD4_Treg",
+  seur.cd4@meta.data$seurat_clusters == 3 ~ "thyCD4_Treg",
+  seur.cd4@meta.data$seurat_clusters == 4 ~ "thyCD4_DPp",
   seur.cd4@meta.data$seurat_clusters == 5 ~ "thyCD4_Tagonist",
   seur.cd4@meta.data$seurat_clusters == 6 ~ "thyCD4_DPq"
 )
@@ -161,8 +172,8 @@ seur.mait <- preprocess(seurobj = subset(seur.filt, subset=group.ident=="MAIT_Th
 #   slice_max(n=5, order_by=avg_log2FC)
 
 seur.mait@meta.data$cell_annot <- case_when(
-  seur.mait@meta.data$seurat_clusters == 0 ~ "thyMAIT_ccr7",
-  seur.mait@meta.data$seurat_clusters == 1 ~ "thyMAIT_ccr9",
+  seur.mait@meta.data$seurat_clusters == 0 ~ "thyMAIT_ccr9",
+  seur.mait@meta.data$seurat_clusters == 1 ~ "thyMAIT_ccr7",
   seur.mait@meta.data$seurat_clusters == 2 ~ "thyMAIT_effector",
   seur.mait@meta.data$seurat_clusters == 3 ~ "thyMAIT_idk",
   seur.mait@meta.data$seurat_clusters == 4 ~ "thyMAIT_cd8aa",
@@ -176,6 +187,19 @@ ggpubr::ggarrange(DimPlot(seur.mait, group.by="cell_annot", label=T, repel=T) +
                     labs(x="", y="") + theme(axis.text.x=element_text(angle=90, hjust=1, vjust=0.5, size=7)),
                   ncol=2, widths = c(1.2,2))
 # ggsave("~/Projects/HumanThymusProject/data/human-thymus/HumanData_12_CorrelationGEbtwTlineages/umap_thyMAIT.jpeg", width=12, height=5)
+
+# Markers MAIT
+# markers.mait <- FindAllMarkers(seur.mait, only.pos=TRUE, min.pct=0.25, logfc.threshold=0.5) %>%
+#   group_by(cluster) %>%
+#   slice_max(n=20, order_by=avg_log2FC)
+# markers.mait <- markers.mait %>%
+#   select(avg_log2FC, p_val_adj, cluster, gene) %>%
+#   left_join(seur.mait@meta.data %>%
+#               select(cell_annot, RNA_snn_res.0.2) %>%
+#               rename(cluster=RNA_snn_res.0.2) %>%
+#               distinct(),
+#             by="cluster") %>%
+#   relocate(gene, cell_annot)
 ```
 
 
@@ -194,8 +218,8 @@ seur.nkt@meta.data$cell_annot <- case_when(
   seur.nkt@meta.data$seurat_clusters == 1 ~ "thyNKT_effFOSJUN",
   seur.nkt@meta.data$seurat_clusters == 2 ~ "thyNKT_ccr9",
   seur.nkt@meta.data$seurat_clusters == 3 ~ "thyNKT_cd8aa",
-  seur.nkt@meta.data$seurat_clusters == 4 ~ "thyNKT_effector",
-  seur.nkt@meta.data$seurat_clusters == 5 ~ "thyNKT_IFNsig"
+  seur.nkt@meta.data$seurat_clusters == 4 ~ "thyNKT_effector"
+  # seur.nkt@meta.data$seurat_clusters == 5 ~ "thyNKT_IFNsig"
 )
 
 ggpubr::ggarrange(DimPlot(seur.nkt, group.by="cell_annot", label=T, repel=T) +
@@ -204,12 +228,32 @@ ggpubr::ggarrange(DimPlot(seur.nkt, group.by="cell_annot", label=T, repel=T) +
                     labs(x="", y="") + theme(axis.text.x=element_text(angle=90, hjust=1, vjust=0.5, size=7)),
                   ncol=2, widths = c(1.2,2))
 # ggsave("~/Projects/HumanThymusProject/data/human-thymus/HumanData_12_CorrelationGEbtwTlineages/umap_thyNKT.jpeg", width=12, height=5)
+
+# # Markers NKT
+# markers.nkt <- FindAllMarkers(seur.nkt, only.pos=TRUE, min.pct=0.25, logfc.threshold=0.5) %>%
+#   group_by(cluster) %>%
+#   slice_max(n=20, order_by=avg_log2FC)
+# markers.nkt <- markers.nkt %>%
+#   select(avg_log2FC, p_val_adj, cluster, gene) %>%
+#   left_join(seur.nkt@meta.data %>%
+#               select(cell_annot, RNA_snn_res.0.3) %>%
+#               rename(cluster=RNA_snn_res.0.3) %>%
+#               distinct(),
+#             by="cluster") %>%
+#   relocate(gene, cell_annot)
+# 
+# # Combine MAIT and NKT markers and export as .csv file
+# markers.to.export <- rbind(markers.nkt, markers.mait) %>%
+#   ungroup() %>%
+#   select(-cluster)
+# table(markers.to.export$cell_annot)
+# write_csv(markers.to.export, "~/Desktop/top20markers_mait_nkt.csv")
 ```
 
 
 ### 2.6. GDT cells
 ```{r preprocessing-gdt}
-seur.gd <- preprocess(seurobj = subset(seur.filt, subset=group.ident=="GD_Thymus"),   celltype = "GDthy", ndim=10, res=0.2)
+seur.gd <- preprocess(seurobj = subset(seur.filt, subset=group.ident=="GD_Thymus"), celltype = "GDthy", ndim=10, res=0.2)
 
 # Annotate
 # Idents(seur.gd) <- "cell_annot"
@@ -219,8 +263,8 @@ seur.gd <- preprocess(seurobj = subset(seur.filt, subset=group.ident=="GD_Thymus
 
 seur.gd@meta.data$cell_annot <- case_when(
   seur.gd@meta.data$seurat_clusters == 0 ~ "thyGDT_IFNsig",
-  seur.gd@meta.data$seurat_clusters == 1 ~ "thyGDT_ccr9",
-  seur.gd@meta.data$seurat_clusters == 2 ~ "thyGDT_immat",
+  seur.gd@meta.data$seurat_clusters == 1 ~ "thyGDT_immat",
+  seur.gd@meta.data$seurat_clusters == 2 ~ "thyGDT_ccr9",
   seur.gd@meta.data$seurat_clusters == 3 ~ "thyGDT_effector",
   seur.gd@meta.data$seurat_clusters == 4 ~ "thyGDT_immat_cycl",
   seur.gd@meta.data$seurat_clusters == 5 ~ "thyGDT_DP"
@@ -288,7 +332,7 @@ table(seur.thym@meta.data[,c("cell_annot", "group.ident")], useNA="ifany")
 
 ## 3. GENE CORRELATION
 
-```{r check-method-impact}
+```{r check-method-impact, eval=FALSE, include=FALSE}
 # Sanity check cells sequenced by WTA or WTA_VDJ per cluster
 test <- seur.thym@meta.data %>%
   group_by(Method, cell_annot) %>%
@@ -488,50 +532,6 @@ plotHeatmap <- function(values, clust=F, pval=T, colscalerange=c(0.5,1), plottit
     recordPlot()
   }
 }
-
-# # Prepare colors
-# col_text <- c(rep("#e41a1c", 7), # CD4
-#               rep("#377eb8", 6), # CD8
-#               rep("#4daf4a", 7), # MAIT
-#               rep("#984ea3", 6), # NKT
-#               rep("#ff7f00", 6)) # GDT
-# names(col_text) <- colnames(Corr.Coeff.Table)
-# # col_text <- col_text[corrMatOrder(Corr.Coeff.Table, order="hclust", hclust.method="ward.D")]
-# 
-# # Plot
-# jpeg("~/Projects/HumanThymusProject/data/human-thymus/HumanData_12_CorrelationGEbtwTlineages/corr_heatmap_ordered_commonHVG.jpeg", width=2200, height=2200, res=300)
-# corrplot(Corr.Coeff.Table,
-#          is.corr=F, # is input matrix a corr matrix?
-#          
-#          # Order as original
-#          order="original",
-#          # Order with HClustering 
-#          # order="hclust",
-#          # hclust.method = "ward.D",
-# 
-#          # Color scale
-#          method="color", # visualize corr as color
-#          # col=colorRampPalette(c("darkblue", "white","darkred"))(200),
-#          col=kovesi.rainbow_bgyr_35_85_c73(200),
-#          # col.lim=c(0.5,1),
-#          cl.align.text="l", # alignment text color legend
-#          diag=F, # no color in the diagonal
-#          
-#          # Significance
-#          p.mat=p.value.table,
-#          sig.level=0.05, # if pval>sig.level => corr coeff is insig
-#          # insig="pch", pch=19, pch.cex=0.25, pch.col="black", # add points to insig squares
-#          insig="blank", # make insignificant squares blank
-#          
-#          # Text & title
-#          main="Correlation on 230 HVGs (HVGs common to all lineages)",
-#          tl.col=col_text, # text color
-#          tl.pos="lt", # position labels on left & top
-#          tl.cex=0.7, # size text label
-#          
-#          # Margins
-#          mar=c(3,1,5,1))
-# dev.off()
 ```
 
 
@@ -663,7 +663,7 @@ getUMAP <- function(seurobj, hvg, approxPCA=TRUE, ndim=20, res=1){
 
 
 
-## 4.1. All HVGs (union of thymic lineages)
+### 4.1. All HVGs (union of thymic lineages)
 ```{r hvg-all, fig.height=10, fig.width=10}
 # Get list of all HVGs
 hvg.all <- unique(c(VariableFeatures(seur.cd4),
@@ -729,8 +729,7 @@ plot_grid(
 ```
 
 
-## 4.2. Lineage-specific HVGs
-
+### 4.2. Lineage-specific HVGs
 ```{r hvg-unique, fig.height=10, fig.width=10}
 # Get list of all HVGs
 length(hvg.unique) # 3538
@@ -790,8 +789,7 @@ plot_grid(
 ```
 
 
-## 4.3. Common thymic HVGs
-
+### 4.3. Common thymic HVGs
 ```{r hvg-common, fig.height=10, fig.width=10}
 # Get list of common HVGs
 length(hvg.common) # 230
@@ -849,6 +847,64 @@ plot_grid(
 # ggsave(file.path(path.plot, "common-thym-hvg_umapthymus.jpeg"), width=18, height=6)
 ```
 
+
+### 4.4. 2000 HVGs from integrated seurat object
+```{r hvg-2000-integrated}
+# Get list of common HVGs
+length(VariableFeatures(seur)) # 2000
+
+# Correlation
+corr.hvg2000 <- runCorrelation(seuratobj=seur.thym, geneslist=VariableFeatures(seur))
+corr.hvg2000$corr[corr.hvg2000$corr==1] <- NA
+# jpeg(file.path(path.plot, "int2000hvgs-thym-hvg_corrheatmap.jpeg"), width=2200, height=2200, res=300)
+plotHeatmap(values=corr.hvg2000, clust=T, pval = T, plottitle = "Correlation on 2000 HVGs (HVGs from integrated object)", colscalerange = c(0.5, 0.92))
+# dev.off()
+
+
+# integrated UMAP
+umap.hvgcommon <- getUMAP(seur.filt, hvg=hvg.common)
+plot_grid(
+  # UMAP by clusters
+  DimPlot(umap.hvgcommon, reduction = "umap", group.by="seurat_clusters", label = TRUE, repel = TRUE) +
+    scale_color_manual(values=colorRampPalette(brewer.pal(12,"Paired"))(18)) +
+    ggtitle("UMAP on 230 HVGs (HVGs common to all lineages)"),
+  # barplot by cell.ident
+  ggplot(umap.hvgcommon@meta.data[,c("cell.ident", "seurat_clusters")] %>% group_by(cell.ident, seurat_clusters) %>% count(),
+       aes(x=seurat_clusters, y=n, fill=cell.ident))+
+  geom_bar(position="fill", stat="identity") +
+  scale_fill_manual(values=brewer.pal(7,"Paired")) +
+  labs(x="clusters", y="", title = ""),
+  # UMAP by cell.ident
+  DimPlot(umap.hvgcommon, reduction = "umap", group.by = "cell.ident") +
+    scale_color_manual(values=brewer.pal(7,"Paired"))+
+    ggtitle(""),
+  ncol=3
+)
+# ggsave(file.path(path.plot, "common-thym-hvg_umap.jpeg"), width=18, height=6)
+
+
+# Thymic UMAP
+umap.thym.hvgcommon <- getUMAP(seur.thym, hvg=hvg.common, res=0.2)
+plot_grid(
+  # UMAP by clusters
+  DimPlot(umap.thym.hvgcommon, reduction = "umap", group.by="seurat_clusters", label = TRUE, repel = TRUE) +
+    scale_color_manual(values=colorRampPalette(brewer.pal(12,"Paired"))(18)) +
+    ggtitle("Thymic UMAP on 230 HVGs (HVGs common to all lineages)"),
+  # barplot by cell.ident
+  ggplot(umap.thym.hvgcommon@meta.data[,c("cell.ident", "seurat_clusters")] %>% group_by(cell.ident, seurat_clusters) %>% count(),
+       aes(x=seurat_clusters, y=n, fill=cell.ident))+
+  geom_bar(position="fill", stat="identity") +
+  scale_fill_manual(values=brewer.pal(5,"Paired")) +
+  labs(x="clusters", y="", title = ""),
+  # UMAP by cell.ident
+  DimPlot(umap.thym.hvgcommon, reduction = "umap", group.by = "cell_annot", label=TRUE, repel=TRUE) +
+    scale_color_manual(values=colorRampPalette(brewer.pal(5,"Paired"))(32)) +
+    ggtitle(""),
+  ncol=3,
+  rel_widths = c(1,1,2)
+)
+# ggsave(file.path(path.plot, "common-thym-hvg_umapthymus.jpeg"), width=18, height=6)
+```
 
 
 
@@ -945,8 +1001,7 @@ compare_MetaNeighbor_Correlation <- function(htmp.mtn, cor.matrix, cor.colrange=
 ```
 
 
-## 5.1. MetaNeighbor on all HVGs (union of thymic HVGs)
-
+### 5.1. MetaNeighbor on all HVGs (union of thymic HVGs)
 ```{r metaneighbor-allHVG}
 # Run metaneighbor
 htmp.mtn.hvgall <- runMetaNeighbor(geneslist=hvg.all, plotitle = "5862 HVGs", filename="allHVG_metaneighbor.jpeg")
@@ -958,8 +1013,7 @@ compare_MetaNeighbor_Correlation(htmp.mtn = htmp.mtn.hvgall, cor.matrix = corr.h
 ```
 
 
-## 5.2. MetaNeighbor on lineage-specific HVGs
-
+### 5.2. MetaNeighbor on lineage-specific HVGs
 ```{r metaneighbor-lineage-specific-HVG}
 # Run metaneighbor
 htmp.mtn.hvgunique <- runMetaNeighbor(geneslist=hvg.unique, plotitle = "3538 HVGs (lineage-specific)", filename="lineagespecificHVG_metaneighbor.jpeg")
@@ -971,8 +1025,7 @@ compare_MetaNeighbor_Correlation(htmp.mtn = htmp.mtn.hvgunique, cor.matrix = cor
 ```
 
 
-## 5.3. MetaNeighbor on common thymic HVGs
-
+### 5.3. MetaNeighbor on common thymic HVGs
 ```{r metaneighbor-commonHVG}
 # Run metaneighbor
 htmp.mtn.hvgcommon <- runMetaNeighbor(geneslist=hvg.common, plotitle = "230 HVGs (common)", filename="commonHVG_metaneighbor.jpeg")
