--- a/scripts-in-progress/human-thymus/HumanData_12_AnalysisByLineage.Rmd
+++ b/scripts-in-progress/human-thymus/HumanData_12_AnalysisByLineage.Rmd
@@ -28,16 +28,28 @@ library(harmony)
 library(corrplot)
 library(pals)
 library(VennDiagram)
-# library(ggalluvial)
+library(ggalluvial)
 # library(SingleCellExperiment)
 ```
 
-```{r import-data}
+```{r import-data, fig.height=8, fig.width=8}
 # Import seurat object
 seur <- readRDS("~/Projects/HumanThymusProject/data/raw_data/human_data/seurat_filtered_harmony_02_15_23.RDS") # removed low-quality cells
 
 # Sanity check
-print(seur) # 80,614 cells
+print(seur) # 78,607 cells
+cols_integrated <- c("0" = "#f4c40f", "1" = "#b75347", "2" = "#d8443c", "3" = "#e09351", "4" = "#2b9b81", 
+                     "5" = "#421401", "6" = "#92c051", "7" = "#9f5691", "8" = "#17154f", "9" = "#74c8c3", 
+                     "10" = "#5a97c1", "11" = "gold", "12" = "#a40000", "13" = "#72bcd5", "14" = "grey50",
+                     "15" = "orange", "16" = "blueviolet", "17" = "#0a2e57", "18" = "#bdbdbd")
+SCpubr::do_DimPlot(seur, 
+                   group.by = "new_clusters",
+                   label=T,
+                   label.color="black",
+                   legend.position = "none",
+                   repel=T,
+                   colors.use=cols_integrated,
+                   font.size = 24)
 
 # Get raw object?
 counts <- seur@assays$RNA@counts
@@ -58,7 +70,7 @@ seur.filt <- CreateSeuratObject(counts=counts, meta.data = metadata)
 
 ```{r preprocessing1}
 # Preprocessing
-preprocess <- function(seurobj, ndim=20, res=0.8, celltype, approxPCA=FALSE){
+preprocess <- function(seurobj, ndim, res, celltype, approxPCA=FALSE){
   print(seurobj)
   cat("Cells:", unique(seurobj$group.ident), "\n")
   
@@ -100,10 +112,125 @@ preprocess <- function(seurobj, ndim=20, res=0.8, celltype, approxPCA=FALSE){
 
 
 ### 2.2. CD4 T cells
-```{r preprocessing-cd4}
+
+#### 2.2.1. CD4 Thymocytes
+```{r preprocessing-cd4-thymus}
 # Run preprocessing
 # unique(seur.filt$group.ident)
-seur.cd4 <- preprocess(seurobj = subset(seur.filt, subset=group.ident=="CD4_Thymus"),  celltype = "CD4thy", ndim=10, res=0.2)
+seur.thycd4 <- preprocess(seurobj = subset(seur.filt, subset=group.ident=="CD4_Thymus"),  celltype = "CD4thy", ndim=10, res=0.2)
+
+# Annotate
+# Idents(seur.thycd4) <- "cell_annot"
+# markers <- FindAllMarkers(seur.thycd4, only.pos=TRUE, min.pct=0.25, logfc.threshold=0.5) %>%
+#   group_by(cluster) %>%
+#   slice_max(n=5, order_by=avg_log2FC)
+
+seur.thycd4@meta.data$cell_annot <- case_when(
+  seur.thycd4@meta.data$seurat_clusters == 0 ~ "thyCD4_ccr9",
+  seur.thycd4@meta.data$seurat_clusters == 1 ~ "thyCD4_ccr7",
+  seur.thycd4@meta.data$seurat_clusters == 2 ~ "thyCD4_ISP",
+  seur.thycd4@meta.data$seurat_clusters == 3 ~ "thyCD4_Treg",
+  seur.thycd4@meta.data$seurat_clusters == 4 ~ "thyCD4_DPp",
+  seur.thycd4@meta.data$seurat_clusters == 5 ~ "thyCD4_Tagonist",
+  seur.thycd4@meta.data$seurat_clusters == 6 ~ "thyCD4_DPq"
+)
+# saveRDS(seur.thycd4, "~/Projects/HumanThymusProject/data/human-thymus/HumanData_12_AnalysisByLineage/seurat_thymus-CD4_2023-02-27.rds")
+
+ggpubr::ggarrange(DimPlot(seur.thycd4, group.by="cell_annot", label=T, repel=T) +
+                    theme(legend.position="none") + labs(title="Thymic CD4"),
+                  DotPlot(seur.thycd4, features=unique(c("CD4", "CD8A", "CD8B", "RAG1", markers$gene))) +
+                    labs(x="", y="") + theme(axis.text.x=element_text(angle=90, hjust=1, vjust=0.5, size=7)),
+                  ncol=2, widths = c(1.2,2))
+# ggsave("~/Projects/HumanThymusProject/data/human-thymus/HumanData_12_CorrelationGEbtwTlineages/umap_thyCD4.jpeg", width=12, height=5)
+
+# SCpubr
+cols_cd4 <- c("#c7e9c0", "#238b45", "#edf8e9", "#41ab5d", "#74c476","#005a32", "#a1d99b")
+names(cols_cd4) <- unique(seur.thycd4$cell_annot)
+SCpubr::do_DimPlot(seur.thycd4, 
+                   group.by = "cell_annot",
+                   label=T,
+                   label.color="black",
+                   legend.position = "none",
+                   repel=T,
+                   colors.use=cols_cd4,
+                   font.size = 24)
+# ggsave("~/Projects/HumanThymusProject/data/human-thymus/HumanData_12_AnalysisByLineage/scpubr_cd4.jpeg", width=6, height=6)
+```
+
+```{r preprocessing-cd4-thymus2, fig.width=24, fig.height=8}
+# Import object if necessary
+# seur.thycd4 <- readRDS("~/Projects/HumanThymusProject/data/human-thymus/HumanData_12_AnalysisByLineage/seurat_thymus-CD4_2023-02-27.rds")
+
+# Add thymic CD4 clusters to integrated object
+table(rownames(seur@meta.data[seur@meta.data$group.ident=="CD4_Thymus",]) == rownames(seur.thycd4@meta.data)) # check rownames are in same order
+seur@meta.data[seur@meta.data$group.ident=="CD4_Thymus", "clusters_thyCD4"] <- seur.thycd4@meta.data$cell_annot
+table(seur@meta.data[,c("group.ident", "clusters_thyCD4")], useNA="ifany")
+
+
+# Plot newly-assigned clusters & clusters from integrated object
+cols_cd4 <- c("#c7e9c0", "#238b45", "#edf8e9", "#41ab5d", "#74c476","#005a32", "#a1d99b")
+names(cols_cd4) <- unique(seur.thycd4$cell_annot)
+SCpubr::do_DimPlot(seur.thycd4, 
+                   group.by = "cell_annot",
+                   label=T,
+                   label.color="black",
+                   legend.position = "none",
+                   repel=T,
+                   colors.use=cols_cd4,
+                   plot.title="CD4 thymocyte clusters",
+                   font.size = 24) |
+  SCpubr::do_DimPlot(seur.thycd4, 
+                   group.by = "new_clusters",
+                   label=T,
+                   label.color="black",
+                   legend.position = "none",
+                   repel=T,
+                   colors.use=cols_integrated,
+                   plot.title="Integrated object clusters",
+                   font.size = 24) |
+  SCpubr::do_DimPlot(seur, 
+                     group.by = "clusters_thyCD4",
+                     na.value=adjustcolor("grey90", alpha.f = 0.5),
+                     border.size=1,
+                     label=T,
+                     label.color="black ",
+                     legend.position = "none",
+                     repel=T,
+                     colors.use=cols_cd4,
+                   plot.title="CD4 thymocyte clusters on integrated object",
+                   font.size = 24)
+# ggsave("~/Projects/HumanThymusProject/data/human-thymus/HumanData_12_AnalysisByLineage/cd4_thy_overlap.jpeg", width=24, height=8)
+
+
+# Ggalluvial
+test <- seur@meta.data %>%
+  as_tibble() %>%
+  filter(Tissue=="Thymus") %>%
+  group_by(new_clusters, clusters_thyCD4) %>%
+  summarise(ncells=n()) %>%
+  filter(!is.na(clusters_thyCD4)) %>%
+  rename("integrated_clusters" = "new_clusters",
+         "cd4_clusters" = "clusters_thyCD4")
+
+ggplot(test, aes(y=ncells, axis1=integrated_clusters, axis2=cd4_clusters)) +
+  geom_alluvium(aes(fill=integrated_clusters), width = 1/12, lode.guidance="frontback") +
+  geom_stratum(width = 1/12, fill = "black", color = "grey") +
+  geom_label(stat = "stratum", aes(label = after_stat(stratum))) +
+  scale_x_discrete(limits = c("integrated_clusters", "thyCD4_clusters"), expand = c(.05, .05)) +
+  scale_fill_manual(values=cols_integrated) +
+  labs(title="Comparison thymic CD4 cluster assignment", y="#cells")
+# ggsave("~/Projects/HumanThymusProject/data/human-thymus/HumanData_12_AnalysisByLineage/cd4_thy_overlap2.jpeg", width=10, height=8)
+
+```
+
+#### 2.2.2. CD4 cells overall
+```{r preprocessing-cd4-all}
+# Run preprocessing
+# unique(seur.filt$group.ident)
+seur.cd4 <- preprocess(seurobj = subset(seur.filt, subset=cell.ident=="CD4"),  celltype = "CD4", ndim=10, res=0.2)
+DimPlot(seur.cd4) |
+  DimPlot(seur.cd4, group.by="Tissue")
+
 
 # Annotate
 # Idents(seur.cd4) <- "cell_annot"
@@ -144,8 +271,9 @@ SCpubr::do_DimPlot(seur.cd4,
 ```
 
 
+
 ### 2.3. CD8 T cells
-```{r preprocessing-cd8}
+```{r preprocessing-cd8-thymus}
 seur.cd8 <- preprocess(seurobj = subset(seur.filt, subset=group.ident=="CD8_Thymus"),  celltype = "CD8thy", ndim=10, res=0.2)
 
 # Annotate
@@ -209,6 +337,54 @@ SCpubr::do_FeaturePlot(seur.cd8,
 ggsave("~/Projects/HumanThymusProject/data/human-thymus/HumanData_12_AnalysisByLineage/cd8aa_signatures.jpeg", width=18, height=6)
 ```
 
+```{r preprocessing-cd8-thymus2, fig.width=24, fig.height=8}
+# Import object if necessary
+seur.thycd8 <- readRDS("~/Projects/HumanThymusProject/data/human-thymus/HumanData_12_AnalysisByLineage/seurat_thymus-CD8_2023-02-27.rds")
+
+# Add thymic CD4 clusters to integrated object
+table(rownames(seur@meta.data[seur@meta.data$group.ident=="CD8_Thymus",]) == rownames(seur.thycd8@meta.data)) # check rownames are in same order
+seur@meta.data[seur@meta.data$group.ident=="CD8_Thymus", "clusters_thyCD8"] <- seur.thycd8@meta.data$cell_annot
+table(seur@meta.data[,c("group.ident", "clusters_thyCD8")], useNA="ifany")
+
+
+# Plot newly-assigned clusters & clusters from integrated object
+cols_cd8 <- c("#f768a1", "#f1eef6", "#c994c7", "#fa9fb5", "#df65b0","#d4b9da")
+names(cols_cd8) <- unique(seur.thycd8$cell_annot)
+SCpubr::do_DimPlot(seur.thycd8, 
+                   group.by = "cell_annot",
+                   label=T,
+                   label.color="black",
+                   legend.position = "none",
+                   repel=T,
+                   colors.use=cols_cd8,
+                   plot.title="CD8 thymocyte clusters",
+                   font.size = 24) |
+  SCpubr::do_DimPlot(seur.thycd8, 
+                   group.by = "new_clusters",
+                   label=T,
+                   label.color="black",
+                   legend.position = "none",
+                   repel=T,
+                   colors.use=cols_integrated,
+                   plot.title="Integrated object clusters",
+                   font.size = 24) |
+  SCpubr::do_DimPlot(seur, 
+                     group.by = "clusters_thyCD8",
+                     na.value=adjustcolor("grey90", alpha.f = 0.5),
+                     border.size=1,
+                     label=T,
+                     label.color="black",
+                     legend.position = "none",
+                     repel=T,
+                     colors.use=cols_cd8,
+                   plot.title="CD8 thymocyte clusters on integrated object",
+                   font.size = 24)
+# ggsave("~/Projects/HumanThymusProject/data/human-thymus/HumanData_12_AnalysisByLineage/cd8_thy_overlap.jpeg", width=24, height=8)
+```
+
+
+
+
 
 ### 2.4. MAIT cells
 ```{r preprocessing-mait}
@@ -216,25 +392,34 @@ ggsave("~/Projects/HumanThymusProject/data/human-thymus/HumanData_12_AnalysisByL
 seur.mait <- preprocess(seurobj = subset(seur.filt, subset=group.ident=="MAIT_Thymus"), celltype = "MAITthy", ndim=10, res=0.2)
 
 # Annotate
-# Idents(seur.mait) <- "cell_annot"
-# markers <- FindAllMarkers(seur.mait, only.pos=TRUE, min.pct=0.25, logfc.threshold=0.5) %>%
+# Idents(seur.thymait) <- "cell_annot"
+# markers <- FindAllMarkers(seur.thymait, only.pos=TRUE, min.pct=0.25, logfc.threshold=0.5) %>%
 #   group_by(cluster) %>%
 #   slice_max(n=5, order_by=avg_log2FC)
 
-seur.mait@meta.data$cell_annot <- case_when(
-  seur.mait@meta.data$seurat_clusters == 0 ~ "thyMAIT_ccr9",
-  seur.mait@meta.data$seurat_clusters == 1 ~ "thyMAIT_ccr7",
-  seur.mait@meta.data$seurat_clusters == 2 ~ "thyMAIT_effector",
-  seur.mait@meta.data$seurat_clusters == 3 ~ "thyMAIT_idk",
-  seur.mait@meta.data$seurat_clusters == 4 ~ "thyMAIT_cd8aa",
-  seur.mait@meta.data$seurat_clusters == 5 ~ "thyMAIT_DP",
-  seur.mait@meta.data$seurat_clusters == 6 ~ "thyMAIT_IFNsig"
+# seur.thymait@meta.data$cell_annot <- case_when(
+#   seur.thymait@meta.data$seurat_clusters == 0 ~ "thyMAIT_ccr9",
+#   seur.thymait@meta.data$seurat_clusters == 1 ~ "thyMAIT_ccr7",
+#   seur.thymait@meta.data$seurat_clusters == 2 ~ "thyMAIT_effector",
+#   seur.thymait@meta.data$seurat_clusters == 3 ~ "thyMAIT_idk",
+#   seur.thymait@meta.data$seurat_clusters == 4 ~ "thyMAIT_cd8aa",
+#   seur.thymait@meta.data$seurat_clusters == 5 ~ "thyMAIT_DP",
+#   seur.thymait@meta.data$seurat_clusters == 6 ~ "thyMAIT_IFNsig"
+# )
+seur.thymait@meta.data$cell_annot <- case_when(
+  seur.thymait@meta.data$seurat_clusters == 0 ~ "MAIT_c2",
+  seur.thymait@meta.data$seurat_clusters == 1 ~ "MAIT_c4",
+  seur.thymait@meta.data$seurat_clusters == 2 ~ "MAIT_c6",
+  seur.thymait@meta.data$seurat_clusters == 3 ~ "MAIT_c3",
+  seur.thymait@meta.data$seurat_clusters == 4 ~ "MAIT_c1",
+  seur.thymait@meta.data$seurat_clusters == 5 ~ "MAIT_c0",
+  seur.thymait@meta.data$seurat_clusters == 6 ~ "MAIT_c5"
 )
-# saveRDS(seur.mait, "~/Projects/HumanThymusProject/data/human-thymus/HumanData_12_AnalysisByLineage/seurat_thymus-MAIT_2023-02-27.rds")
+# saveRDS(seur.thymait, "~/Projects/HumanThymusProject/data/human-thymus/HumanData_12_AnalysisByLineage/seurat_thymus-MAIT_2023-02-27.rds")
 
-ggpubr::ggarrange(DimPlot(seur.mait, group.by="cell_annot", label=T, repel=T) +
+ggpubr::ggarrange(DimPlot(seur.thymait, group.by="cell_annot", label=T, repel=T) +
                     theme(legend.position="none") + labs(title="Thymic MAIT"),
-                  DotPlot(seur.mait, features=unique(c("CD4", "CD8A", "CD8B", "RAG1", markers$gene))) +
+                  DotPlot(seur.thymait, features=unique(c("CD4", "CD8A", "CD8B", "RAG1", markers$gene))) +
                     labs(x="", y="") + theme(axis.text.x=element_text(angle=90, hjust=1, vjust=0.5, size=7)),
                   ncol=2, widths = c(1.2,2))
 # ggsave("~/Projects/HumanThymusProject/data/human-thymus/HumanData_12_CorrelationGEbtwTlineages/umap_thyMAIT.jpeg", width=12, height=5)
@@ -267,6 +452,61 @@ SCpubr::do_DimPlot(seur.mait,
 #             by="cluster") %>%
 #   relocate(gene, cell_annot)
 ```
+
+```{r preprocessing-mait-thymus2, fig.width=24, fig.height=8}
+# Import object if necessary
+seur.thymait <- readRDS("~/Projects/HumanThymusProject/data/human-thymus/HumanData_12_AnalysisByLineage/seurat_thymus-MAIT_2023-02-27.rds")
+
+# Add thymic CD4 clusters to integrated object
+table(rownames(seur@meta.data[seur@meta.data$group.ident=="MAIT_Thymus",]) == rownames(seur.thymait@meta.data)) # check rownames are in same order
+seur@meta.data[seur@meta.data$group.ident=="MAIT_Thymus", "clusters_thyMAIT"] <- seur.thymait@meta.data$cell_annot
+table(seur@meta.data[,c("group.ident", "clusters_thyMAIT")], useNA="ifany")
+
+
+# Plot newly-assigned clusters & clusters from integrated object
+# cols_mait <- c("#2171b5", "#6baed6", "#9ecae1", "#deebf7", "#c6dbef", "#f7fbff", "#4292c6")
+# names(cols_mait) <- unique(seur.thymait$cell_annot)
+cols_mait <- c("MAIT_c0" = "#d8443c",
+               "MAIT_c1" = "#e09351",
+               "MAIT_c2" = "gold",
+               "MAIT_c3" = "#74c8c3",
+               "MAIT_c4" = "#5a97c1",
+               "MAIT_c5" = "#a40000",
+               "MAIT_c6" = "#72bcd5")
+SCpubr::do_DimPlot(seur.thymait,
+                   group.by = "cell_annot",
+                   label=T,
+                   label.color="black",
+                   legend.position = "none",
+                   repel=T,
+                   colors.use=cols_mait,
+                   plot.title="MAIT thymocyte clusters",
+                   font.size = 24) |
+  SCpubr::do_DimPlot(seur.thymait, 
+                   group.by = "new_clusters",
+                   label=T,
+                   label.color="black",
+                   legend.position = "none",
+                   repel=T,
+                   colors.use=cols_integrated,
+                   plot.title="Integrated object clusters",
+                   font.size = 24) |
+  SCpubr::do_DimPlot(seur, 
+                     group.by = "clusters_thyMAIT",
+                     na.value=adjustcolor("grey90", alpha.f = 0.5),
+                     border.size=1,
+                     label=T,
+                     label.color="black",
+                     legend.position = "none",
+                     repel=T,
+                     colors.use=cols_mait,
+                   plot.title="MAIT clusters on integrated object",
+                   font.size = 24)
+
+# ggsave("~/Projects/HumanThymusProject/data/human-thymus/HumanData_12_AnalysisByLineage/mait_thy_overlap.jpeg", width=24, height=8)
+```
+
+
 
 
 ### 2.5. NKT cells
@@ -333,6 +573,72 @@ SCpubr::do_DimPlot(seur.nkt,
 # write_csv(markers.to.export, "~/Desktop/top20markers_mait_nkt.csv")
 ```
 
+```{r preprocessing-nkt-thymus2, fig.width=24, fig.height=8}
+# Import object if necessary
+seur.thynkt <- readRDS("~/Projects/HumanThymusProject/data/human-thymus/HumanData_12_AnalysisByLineage/thymus.nkt_02_28_23.RDS")
+
+seur.thynkt@meta.data$cell_annot <- case_when(
+  seur.thynkt@meta.data$new_clusters_NKT == 0 ~ "NKT_c0",
+  seur.thynkt@meta.data$new_clusters_NKT == 1 ~ "NKT_c1",
+  seur.thynkt@meta.data$new_clusters_NKT == 2 ~ "NKT_c2",
+  seur.thynkt@meta.data$new_clusters_NKT == 3 ~ "NKT_c3",
+  seur.thynkt@meta.data$new_clusters_NKT == 4 ~ "NKT_c4",
+  seur.thynkt@meta.data$new_clusters_NKT == 5 ~ "NKT_c5",
+  seur.thynkt@meta.data$new_clusters_NKT == 6 ~ "NKT_c6"
+)
+table(seur.thynkt@meta.data$cell_annot)
+
+# Add thymic CD4 clusters to integrated object
+table(rownames(seur@meta.data[seur@meta.data$group.ident=="NKT_Thymus",]) == rownames(seur.thynkt@meta.data)) # check rownames are in same order
+seur@meta.data[seur@meta.data$group.ident=="NKT_Thymus", "clusters_thyNKT"] <- seur.thynkt@meta.data$cell_annot
+table(seur@meta.data[,c("group.ident", "clusters_thyNKT")], useNA="ifany")
+
+
+# Plot newly-assigned clusters & clusters from integrated object
+# cols_nkt <- c("#9e9ac8", "#f2f0f7", "#cbc9e2", "#54278f", "#756bb1")
+# names(cols_nkt) <- unique(seur.nkt$cell_annot)
+cols_nkt <- c("NKT_c0" = "#d8443c",
+               "NKT_c1" = "#e09351",
+               "NKT_c2" = "gold",
+               "NKT_c3" = "#74c8c3",
+               "NKT_c4" = "#5a97c1",
+               "NKT_c5" = "#a40000",
+               "NKT_c6" = "#72bcd5")
+SCpubr::do_DimPlot(seur.thynkt,
+                   group.by = "cell_annot",
+                   label=T,
+                   label.color="black",
+                   legend.position = "none",
+                   repel=T,
+                   colors.use=cols_nkt,
+                   plot.title="NKT thymocyte clusters",
+                   font.size = 24) |
+  SCpubr::do_DimPlot(seur.thynkt, 
+                   group.by = "new_clusters",
+                   label=T,
+                   label.color="black",
+                   legend.position = "none",
+                   repel=T,
+                   colors.use=cols_integrated,
+                   plot.title="Integrated object clusters",
+                   font.size = 24) |
+  SCpubr::do_DimPlot(seur, 
+                     group.by = "clusters_thyNKT",
+                     na.value=adjustcolor("grey90", alpha.f = 0.5),
+                     border.size=1,
+                     label=T,
+                     label.color="black",
+                     legend.position = "none",
+                     repel=T,
+                     colors.use=cols_nkt,
+                   plot.title="NKT clusters on integrated object",
+                   font.size = 24)
+
+# ggsave("~/Projects/HumanThymusProject/data/human-thymus/HumanData_12_AnalysisByLineage/nkt_thy_overlap.jpeg", width=24, height=8)
+```
+
+
+
 
 ### 2.6. GDT cells
 ```{r preprocessing-gdt}
@@ -377,7 +683,74 @@ SCpubr::do_DimPlot(seur.gd,
 # ggsave("~/Projects/HumanThymusProject/data/human-thymus/HumanData_12_AnalysisByLineage/scpubr_gdt.jpeg", width=6, height=6)
 ```
 
+```{r preprocessing-gdt-thymus2, fig.width=24, fig.height=8}
+# Import object if necessary
+seur.thygdt <- readRDS("~/Projects/HumanThymusProject/data/human-thymus/HumanData_12_AnalysisByLineage/seurat_thymus-GDT_2023-02-27.rds")
 
+# Add thymic CD4 clusters to integrated object
+table(rownames(seur@meta.data[seur@meta.data$group.ident=="GD_Thymus",]) == rownames(seur.thygdt@meta.data)) # check rownames are in same order
+seur@meta.data[seur@meta.data$group.ident=="GD_Thymus", "clusters_thyGDT"] <- seur.thygdt@meta.data$cell_annot
+table(seur@meta.data[,c("group.ident", "clusters_thyGDT")], useNA="ifany")
+
+
+# Plot newly-assigned clusters & clusters from integrated object
+cols_gdt <- c("#74a9cf", "#3690c0", "#045a8d", "#023858", "#0570b0", "#a6bddb")
+names(cols_gdt) <- unique(seur.thygdt$cell_annot)
+SCpubr::do_DimPlot(seur.thygdt, 
+                   group.by = "cell_annot",
+                   label=T,
+                   label.color="black",
+                   legend.position = "none",
+                   repel=T,
+                   colors.use=cols_gdt,
+                   plot.title="CD8 thymocyte clusters",
+                   font.size = 24) |
+  SCpubr::do_DimPlot(seur.thygdt, 
+                   group.by = "new_clusters",
+                   label=T,
+                   label.color="black",
+                   legend.position = "none",
+                   repel=T,
+                   colors.use=cols_integrated,
+                   plot.title="Integrated object clusters",
+                   font.size = 24) |
+  SCpubr::do_DimPlot(seur, 
+                     group.by = "clusters_thyGDT",
+                     na.value=adjustcolor("grey90", alpha.f = 0.5),
+                     border.size=1,
+                     label=T,
+                     label.color="black",
+                     legend.position = "none",
+                     repel=T,
+                     colors.use=cols_gdt,
+                   plot.title="CD8 thymocyte clusters on integrated object",
+                   font.size = 24)
+# ggsave("~/Projects/HumanThymusProject/data/human-thymus/HumanData_12_AnalysisByLineage/gdt_thy_overlap.jpeg", width=24, height=8)
+```
+
+
+```{r merge-thymic-clusters}
+seur@meta.data[seur@meta.data$group.ident=="CD4_Thymus", "clusters_thymus"] <- seur@meta.data[seur@meta.data$group.ident=="CD4_Thymus", "clusters_thyCD4"]
+seur@meta.data[seur@meta.data$group.ident=="CD8_Thymus", "clusters_thymus"] <- seur@meta.data[seur@meta.data$group.ident=="CD8_Thymus", "clusters_thyCD8"]
+seur@meta.data[seur@meta.data$group.ident=="MAIT_Thymus", "clusters_thymus"] <- seur@meta.data[seur@meta.data$group.ident=="MAIT_Thymus", "clusters_thyMAIT"]
+seur@meta.data[seur@meta.data$group.ident=="NKT_Thymus", "clusters_thymus"] <- seur@meta.data[seur@meta.data$group.ident=="NKT_Thymus", "clusters_thyNKT"]
+seur@meta.data[seur@meta.data$group.ident=="GD_Thymus", "clusters_thymus"] <- seur@meta.data[seur@meta.data$group.ident=="GD_Thymus", "clusters_thyGDT"]
+
+
+SCpubr::do_DimPlot(seur, 
+                   group.by = "clusters_thymus",
+                   na.value=adjustcolor("grey90", alpha.f = 0.5),
+                   border.size=1,
+                   label=T,
+                   label.color="black",
+                   legend.position = "none",
+                   repel=T,
+                   # colors.use=cols_gdt,
+                   # plot.title="CD8 thymocyte clusters on integrated object",
+                   font.size = 24)
+
+
+```
 
 
 
